# pynotificator

./: .gitignore  README.md  requirements.txt  setup.cfg
assets/: logo.afdesign
docs/: conf.py  index.rst  installation.rst  pynotificator.rst  quickstart.rst
pynotificator/: __init__.py  __main__.py
pynotify/: __init__.py  __main__.py
