[metadata]
name = pynotificator
version = 0.4.0
url = https://github.com/higurashi-takuto/pynotificator
author = higurashi-takuto
license = MIT
license_file = LICENSE
description = pynotificator: Python から様々な通知を簡単に送るためのライブラリ
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  requests

[options.entry_points]
console_scripts =
  beep-notify = pynotificator.__main__:beep_notify
  center-notify = pynotificator.__main__:center_notify
  slack-notify = pynotificator.__main__:slack_notify
  discord-notify = pynotificator.__main__:discord_notify
  line-notify = pynotificator.__main__:line_notify