[metadata]
name = pynotificator
version = attr: pynotificator.__version__
url = https://github.com/higurashi-takuto/pynotificator
author = higurashi-takuto
author_email = contact@hgrs.me
license = MIT
license_file = LICENSE
description = pynotificator: Easily send notifications from Python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
install_requires =
  requests

[options.extras_require]
  win = win10toast

[options.entry_points]
console_scripts =
  beep-notify = pynotificator.__main__:beep_notify
  desktop-notify = pynotificator.__main__:desktop_notify
  slack-notify = pynotificator.__main__:slack_notify
  discord-notify = pynotificator.__main__:discord_notify
  line-notify = pynotificator.__main__:line_notify